AC_PREREQ([2.53])
AC_INIT([upexplorer], [0.10.0], [jfd@lesbonscomptes.com],
             [upexplorer], [http://www.lesbonscomptes.com/upmpdcli])
AC_CONFIG_SRCDIR([src/upexplo.cpp])
AC_CONFIG_HEADERS([src/localconfig.h])
AM_INIT_AUTOMAKE([1.10 no-define subdir-objects foreign])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
